@@ -28,6 +28,9 @@ pitrery 1.9
   * Add the -l switch to pitrery. It lists the configuration files
     inside the default configuration directory.
 
+  * Include all recovery parameters commented out in the recovery.conf
+    generated at restore.
+
 
 pitrery 1.8
 ===========
